auto-test/tests/chapter_15/invalid_parse/empty_initializer_list.c


int main(void) {
    int arr[1] = {};
    return 0;
}